fix: error messages spacing

--- a/para-front/src/pages/register/register.scss
+++ b/para-front/src/pages/register/register.scss
@@ -20,7 +20,7 @@
     padding: 0.7rem 0.5rem;
     border: 0;
     border-radius: 0.3rem;
-    margin: 0.8rem 0 2.5rem;
+    margin: 0.8rem 0 0;
 
     &:focus{
         transition: all .2s;
@@ -37,7 +37,7 @@
     padding: 0.3rem;
 }
 .username-validation, .name-validation, .password-validation, .email-validation {
-    margin: -2rem 0 3rem 0;
+    margin-bottom: 2rem;
 }
 .register-button-btn{
     display: block;
@@ -73,10 +73,29 @@
     }
 }
 
+.column-left, .column-rigth {
+    display: flex;
+    flex-direction: column;
+    row-gap: 2rem;
+    margin-bottom: 2rem;
+}
+
+.email-register {
+    display: flex;
+    flex-direction: column;
+}
+
+.email-register label {
+    margin-top: 0;
+}
+
+.email-validation {
+    margin-top: 2rem;
+}
 
 @media only screen and (min-width:768px) {
     .register-form input {
-        margin: 0.8rem 0 2.5rem;
+        margin: 0.9rem 0 0;
     }
     .register-form{
         width: 500px;
@@ -87,21 +106,17 @@
     }
     .column-left{
         width: 46%;
-        display: flex;
-        flex-direction: column;
         float: left;
     } 
     .column-rigth{
         width: 46%;
-        display: flex;
-        flex-direction: column;
         float: right;
     } 
     .bottom-elements{ 
         display: flex;
         flex-direction: column;
         clear: both;
-    } 
+    }
     .email-register input{
         width: 100%;
     }
